--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,16 +1,23 @@
 .item{
-    width: 100%;
+    display: inline-block;
 }
 .containerProduct{
-    background-color: rgb(228, 241, 252);
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    flex-wrap: wrap;
+    background-color: rgb(239, 239, 239);
     border-bottom: solid 2px ;
-    
+    width: 400px;
 }
-
+.containerProduct button{
+    border-radius: 10px;
+    padding: 5px;
+    margin-bottom: 20px;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(89, 176, 161);
+    color: rgb(89, 176, 161);
+}
+.containerProduct button:hover{
+    background-color: rgb(210, 210, 210);
+    color: white;
+}
 .titleProduct{
     font-size: 22px;
 }
