--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -6,15 +6,17 @@
     border-bottom: solid 2px ;
     width: 400px;
 }
-.containerProduct button{
+.containerProduct a{
     border-radius: 10px;
     padding: 5px;
     margin-bottom: 20px;
     background-color: rgb(255, 255, 255);
     border: 1px solid rgb(89, 176, 161);
     color: rgb(89, 176, 161);
+    text-decoration: none;
+
 }
-.containerProduct button:hover{
+.containerProduct a:hover{
     background-color: rgb(210, 210, 210);
     color: white;
 }
