--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -1,17 +1,24 @@
 .itemContainer{
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
-    background-color: rgb(192, 192, 192);
+    background-color: rgb(238, 238, 238);
 }
 .itemDetailContainer{
     display: flex;
+    padding: 30px;
 }
 
 .containerProduct{
     width: 300px;
+    height: 400px;
     border-radius: 10px;
-    margin: 0 10px 0 10px;
+    box-shadow: 0px 0px 7px 0.7px;
+    margin: 30px 10px 0 10px;
+    border: none;
+    background-color: white;
+  
 }
 
 .containerDetailProduct{
@@ -27,3 +34,4 @@
 .containerProduct img{
     width: 200px;
 }
+
