--- a/src/components/CartView/CartView.css
+++ b/src/components/CartView/CartView.css
@@ -24,7 +24,8 @@
     justify-content: center;
     align-items: center;
     padding: 10px;
-    background-color: rgb(255, 255, 255);
+    background-color: white;
     font-size: 10px;
+
 }
 
