--- a/src/components/CartView/CartView.css
+++ b/src/components/CartView/CartView.css
@@ -29,3 +29,18 @@
 
 }
 
+.gracias{
+    font-size: 25px;
+    background-color: rgb(228, 228, 228);
+    padding: 30px;
+    border: solid 2px rgba(0, 0, 0, 0.236);
+    
+}
+
+.graciasSpan{
+    color: rgb(255, 255, 255);
+    font-size: 22px;
+    background-color: rgb(95, 79, 187);
+    padding: 5px;
+    border-radius: 15px;
+}
